# bk-model-extractor

./: .gitignore  Makefile  README.md  decompile.py  pyproject.toml
gecompressor/: GECompression.cpp  GECompression.h
jtn64/: __init__.py  f3d.py  mesh.py  model.py  textures.py  util.py
tests/: test_model.py  test_util.py
